--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,14 @@
 [workspace]
 resolver = "2"
 members = ["client"]
+
+[profile.client-release]
+inherits = "release"
+strip = true
+lto = true 
+opt-level = "z"
+codegen-units = 1
+panic = "abort"
+
+[workspace.dependencies]
+tokio = { version = "1.44.1", features = ["full"] }
