--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-futures-util = "0.3.31"
+futures-util = {version = "0.3.31", default-features = false, features = ["std", "sink"]}
 tokio.workspace = true
 tokio-tungstenite = "0.26.2"
